--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open",
-    "build": "vite build --clean",
+    "build": "vite build",
     "preview": "vite preview --open"
   },
   "devDependencies": {
